[gd_scene load_steps=10 format=2]

[ext_resource path="res://components/dashboard/widget_heatmap/rotated_label.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/dashboard/widget_heatmap/widget_heatmap.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/Barlow-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://components/dashboard/widget_heatmap/shader_heat_map_grid.gdshader" type="Shader" id=4]
[ext_resource path="res://components/shared/custom_bb_hint_tooltip.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/grid_count = Vector2( 1, 1 )
shader_param/highlighted_cell = Vector2( -1, -1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color( 0.160784, 0.117647, 0.176471, 0.498039 )

[node name="HeatMap" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
widget_type_id = "Heatmap"
supported_types = [ 1, 3 ]
font = SubResource( 1 )

[node name="Background" type="Panel" parent="."]
self_modulate = Color( 0.0392157, 0.145098, 0.247059, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 22 )

[node name="LabelY" parent="." instance=ExtResource( 1 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0

[node name="LabelX" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -5.0
align = 1
valign = 2
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 35.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = -110.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 115.0
margin_top = -105.0
margin_right = -70.0
margin_bottom = -30.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 115.0
margin_top = 10.0
margin_right = -70.0
margin_bottom = -110.0
expand = true
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="Grid" type="ColorRect" parent="TextureRect"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="Gradient" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = 10.0
margin_right = -5.0
margin_bottom = -110.0
expand = true
stretch_mode = 1

[node name="Low" type="Label" parent="Gradient"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -19.0
margin_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/normal = SubResource( 4 )
text = "0"
align = 1
valign = 1

[node name="High" type="Label" parent="Gradient"]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 5.0
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/normal = SubResource( 4 )
text = "1"
align = 1
valign = 1

[node name="ToolTipLabel" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="mouse_entered" from="TextureRect/Grid" to="." method="_on_Grid_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/Grid" to="." method="_on_Grid_mouse_exited"]
